--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
                             <div class="nav-item dropdown">
                                 <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">Menu</a>
                                 <div class="dropdown-menu rounded">
-                                    <a href="blog.html" class="dropdown-item">Joki Tugas</a>
+                                    <a href="service.html" class="dropdown-item">Joki Tugas</a>
                                     <a href="project.html" class="dropdown-item">Jasa Bimbel</a>
                                     <a href="#" class="dropdown-item">Cek Plagiasi</a>
                                     <a href="#" class="dropdown-item">Paraprase</a>
